prob fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -739,6 +739,9 @@ fieldset[disabled] .btn-warning.active {
 }
 
 @media (min-width: 768px) {
+  body {
+    overflow: hidden;
+  }
   .navbar-form {
     margin-top: 21px;
     margin-bottom: 21px;
